succeeded or failed); it defaults to the twice the smallest cycling
interval in the suite; and it will not stall a suite even if set less
than the smallest cycling.

+ Fixed a problem with remote command invocation that caused the new ssh
messaging feature to fail in some cases.

+ Suite info, view, log, and graphing from gcontrol View menu.

+ A new task run time environment variable to allow a task to determine
whether or not it is a cold-start task: $CYLC_TASK_IS_COLDSTART ('True'
or 'False')

+ Bug fix gcylc's "view suite stdout" menu item, broken since 4.5.0.

+ Restore job submit failure hook activation, broken in 4.5.1.

+ Runahead limit is now displayed in the gcontrol status bar.

+ gcontrol graph-view: members of collapsed families are no longer
plotted off to the side as rectangular nodes (no longer necessary as we
now have family state coloring and member state info in hover-over
tool-tips).

+ Restore gcontrol graph-view "cycle time focus" functionality;
accidentally broken between 4.2.2 and 4.5.1.

+ New more powerful and flexible family trigger expressions. All 
family names on the left side of a trigger arrow must now 
be of the form "fam:TRIG-all" or "fam:TRIG-any" where TRIG is 
start, succeed, fail, or finish.  To get the old-style "family 
finished" trigger (all members finished and at least one succeeded):
   fam:finished-all & fam:succeeded-any => foo

+ A new strict validation option to protect against inadvertent creation
of naked dummy tasks (tasks with no explicit runtime config) resulting
from misspelled task names.

+ optional gcontrol landscape graph view

+ gcontrol graph-view redraw reduced.

+ A new command 'cylc broadcast' can be used to override [runtime] 
settings on the fly in a running suite. Example usage: (1) suite 
owner may manually change any runtime settings for any family or 
cycle time; (2) tasks may communicate environment variables to 
downstream tasks. 

+ Abort on undefined Jinja2 variables.
