@@ -41,7 +41,10 @@ owner = options.db_owner
 suite, suiterc = prep_file( args[0], options ).execute()
 
 try:
-    config = config( suite, suiterc, owner )
+    config = config( suite, suiterc, 
+            template_vars=options.templatevars,
+            template_vars_file=options.templatevars_file,
+            owner=owner, verbose=options.verbose )
 except Exception,x:
     if options.debug:
         raise
