@@ -57,9 +57,11 @@ else:
     only = None
 
 try:
-    #import cProfile
-    #cProfile.run('config( suite, suiterc, validation=True, strict=options.strict, verbose=options.verbose )','fooprof')
-    config( suite, suiterc, validation=True, strict=options.strict, verbose=options.verbose, only=only )
+    config( suite, suiterc, 
+            template_vars=options.templatevars,
+            template_vars_file=options.templatevars_file,
+            validation=True, strict=options.strict,
+            verbose=options.verbose, only=only )
 except Exception,x:
     if options.debug:
         raise
