@@ -132,6 +132,16 @@ Arguments:"""
             self.add_option( "-f", "--force",
                 help="Do not ask for confirmation before acting.",
                 action="store_true", default=False, dest="force" )
+        else:
+            self.add_option( "-s", "--set", metavar="NAME=VALUE",
+                help="Pass a template variable value to the suite definition. "
+                "Can be used multiple times to set multiple variables. ",
+                action="append", default=[], dest="templatevars" )
+
+            self.add_option( "--set-file", metavar="FILE",
+                help="Pass template variable values to the suite definition, "
+                "from a file containing NAME=VALUE pairs (one per line).", 
+                action="store", default=None, dest="templatevars_file" )
 
     def parse_args( self ):
         (options, args) = OptionParser.parse_args( self )
