@@ -1027,3 +1027,7 @@ downstream tasks.
 
 + Abort on undefined Jinja2 variables.
 
++ Ability to set Jinja2 template variables on the command line:
+  --set VAR=VALUE or --set-file=FILE where FILE contains VAR=VALUE
+  pairs.
+
